# o4fm

./: CMakeLists.txt  Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml  ci.yml  packages.yml  test.yml
apps/o4fm-lab/: Cargo.toml
apps/o4fm-lab/src/: main.rs
apps/o4fm-node/: Cargo.toml
apps/o4fm-node/src/: cli.rs  main.rs  wav_io.rs
apps/o4fm-node/src/commands/: bin.rs  cpal.rs  demo.rs  mod.rs  tui.rs  voice.rs  wav.rs
apps/o4fm-node/src/o4fm_payload/: framing.rs  mod.rs  rx.rs  tx.rs
crates/o4fm-audio/: Cargo.toml
crates/o4fm-audio/src/: lib.rs
crates/o4fm-core/: Cargo.toml
crates/o4fm-core/src/: lib.rs
crates/o4fm-fec/: Cargo.toml
crates/o4fm-fec/src/: lib.rs
crates/o4fm-link/: Cargo.toml
crates/o4fm-link/benches/: critical_metrics.rs
crates/o4fm-link/src/: lib.rs
crates/o4fm-phy/: Cargo.toml
crates/o4fm-phy/src/: lib.rs
crates/o4fm-radio-io/: Cargo.toml
crates/o4fm-radio-io/src/: lib.rs
docs/: README.md  analog-protocol.md  digital-protocol.md
lib/o4fm_core/: CMakeLists.txt
lib/o4fm_core/include/: errno.h  header.h  pack.h  render.h  rsfec.h
lib/o4fm_core/src/: pack.c  render.c  rsfec.c
lib/o4fm_core/test/: pack_test.c
lib/o4fm_pack/: CMakeLists.txt
lib/o4fm_pack/include/: errno.h  header.h  pack.h  render.h
lib/o4fm_pack/src/: pack.c  render.c
lib/o4fm_pack/test/: pack_test.c  render_test.c
