[workspace]
members = [
  "crates/o4fm-core",
  "crates/o4fm-phy",
  "crates/o4fm-fec",
  "crates/o4fm-link",
  "crates/o4fm-audio",
  "crates/o4fm-radio-io",
  "apps/o4fm-node",
  "apps/o4fm-lab",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPLv3"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
heapless = "0.9.2"
thiserror = "2.0.18"
rand = "0.10.0"
cpal = "0.17.3"
labrador-ldpc = "1.2.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
hound = "3.5.1"
opus = "0.3.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
o4fm-core = { path = "crates/o4fm-core" }
o4fm-phy = { path = "crates/o4fm-phy" }
o4fm-fec = { path = "crates/o4fm-fec" }
o4fm-link = { path = "crates/o4fm-link" }
o4fm-audio = { path = "crates/o4fm-audio" }
o4fm-radio-io = { path = "crates/o4fm-radio-io" }
